# release-notes-gpt

./: .env.example  .gitignore  README.md  app.py  constants.py  fetch_clickup_folders_tasks.py  fetch_clickup_folders_tasks_product.py  generate_notes.py  generate_release_note.py  get_current_features_bugs.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
client/: package-lock.json
client/src/: App.css  App.jsx
client/src/api/: apiClient.js
client/src/components/: AutoTaskSelect.jsx  CurrentItems.jsx  EntryModeToggle.jsx  FileNameInput.jsx  GenerateButton.jsx  GeneratedNotes.jsx  ManualEntryForm.jsx  PastSprintNotes.jsx  SprintSelector.jsx  TagSelect.jsx
client/src/utils/: fileExport.js  storage.js
release_notes_gpt.egg-info/: PKG-INFO  SOURCES.txt
server/: index.js  package-lock.json  package.json
server/config/: constants.js
server/routes/: clickup.js  generate.js
server/services/: anthropic.js  clickup.js
static/: script.js  styles.css
static/css/: styles.css
static/saved_notes/901110337643/: release_notes_20250630_102307.txt  release_notes_20250630_110226.txt  release_notes_20250701_144918.txt  release_notes_20250701_145846.txt  release_notes_20250702_074832.txt  sprint1-official-notes.txt
static/saved_notes/901110499251/: release_notes_20250630_104250.txt  release_notes_20250630_105009.txt  release_notes_20250630_105155.txt  release_notes_20250630_105436.txt  release_notes_20250630_105750.txt  release_notes_20250701_152602.txt
static/scripts/: script.js
templates/: index.html
(+42 files in other folders)
