[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "release-notes-gpt"
version = "0.1.0"
description = "ClickUp-powered release notes generator for FieldSync"
authors = [
  { name = "Lucy Kien" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "Flask",
  "requests",
  "python-dotenv"
]